// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alert button renders the component with props 1`] = `
.c1 {
  display: block;
}

.c0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 12px 32px;
  font-family: "Open Sans",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 16px;
  line-height: 24px;
  font-family: 600;
  cursor: pointer;
  border: none;
  border-radius: 48px;
  color: #fff;
  background-color: #F52D2D;
  -webkit-transition: all 140ms ease-in-out;
  transition: all 140ms ease-in-out;
}

.c0:enabled {
  box-shadow: none;
}

.c0:hover:enabled {
  opacity: 0.8;
  box-shadow: none;
}

.c0:active:enabled,
.c0:focus:enabled {
  box-shadow: inset 0 0 0 2px #F52D2D,inset 0 0 0 4px #fff;
  outline: none;
}

.c0:active:enabled {
  opacity: 0.4;
}

.c0:disabled {
  cursor: not-allowed;
  color: #555B76;
  background-color: #C3C5CF;
}

<button
  class="c0"
>
  <span
    class="c1"
  >
    Alert
  </span>
</button>
`;

exports[`Compact button renders the component with props 1`] = `
.c1 {
  display: block;
}

.c0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 4px 16px;
  font-family: "Open Sans",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 14px;
  line-height: 24px;
  font-family: 600;
  cursor: pointer;
  border: none;
  border-radius: 48px;
  color: #fff;
  background-color: #4B3CFA;
  -webkit-transition: all 140ms ease-in-out;
  transition: all 140ms ease-in-out;
}

.c0:enabled {
  box-shadow: none;
}

.c0:hover:enabled {
  opacity: 0.8;
  box-shadow: none;
}

.c0:active:enabled,
.c0:focus:enabled {
  box-shadow: inset 0 0 0 2px #4B3CFA,inset 0 0 0 4px #fff;
  outline: none;
}

.c0:active:enabled {
  opacity: 0.4;
}

.c0:disabled {
  cursor: not-allowed;
  color: #555B76;
  background-color: #C3C5CF;
}

<button
  class="c0"
>
  <span
    class="c1"
  >
    Compact
  </span>
</button>
`;

exports[`Disabled button renders the component with props 1`] = `
.c1 {
  display: block;
}

.c0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 12px 32px;
  font-family: "Open Sans",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 16px;
  line-height: 24px;
  font-family: 600;
  cursor: pointer;
  border: none;
  border-radius: 48px;
  color: #fff;
  background-color: #4B3CFA;
  -webkit-transition: all 140ms ease-in-out;
  transition: all 140ms ease-in-out;
}

.c0:enabled {
  box-shadow: none;
}

.c0:hover:enabled {
  opacity: 0.8;
  box-shadow: none;
}

.c0:active:enabled,
.c0:focus:enabled {
  box-shadow: inset 0 0 0 2px #4B3CFA,inset 0 0 0 4px #fff;
  outline: none;
}

.c0:active:enabled {
  opacity: 0.4;
}

.c0:disabled {
  cursor: not-allowed;
  color: #555B76;
  background-color: #C3C5CF;
}

<button
  class="c0"
  disabled=""
>
  <span
    class="c1"
  >
    Disabled
  </span>
</button>
`;

exports[`Full width button renders the component with props 1`] = `
.c1 {
  display: block;
}

.c0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  padding: 12px 32px;
  font-family: "Open Sans",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 16px;
  line-height: 24px;
  font-family: 600;
  cursor: pointer;
  border: none;
  border-radius: 48px;
  color: #fff;
  background-color: #4B3CFA;
  -webkit-transition: all 140ms ease-in-out;
  transition: all 140ms ease-in-out;
}

.c0:enabled {
  box-shadow: none;
}

.c0:hover:enabled {
  opacity: 0.8;
  box-shadow: none;
}

.c0:active:enabled,
.c0:focus:enabled {
  box-shadow: inset 0 0 0 2px #4B3CFA,inset 0 0 0 4px #fff;
  outline: none;
}

.c0:active:enabled {
  opacity: 0.4;
}

.c0:disabled {
  cursor: not-allowed;
  color: #555B76;
  background-color: #C3C5CF;
}

<button
  class="c0"
>
  <span
    class="c1"
  >
    Full width
  </span>
</button>
`;

exports[`Large button renders the component with props 1`] = `
.c1 {
  display: block;
}

.c0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 12px 32px;
  font-family: "Open Sans",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 20px;
  line-height: 30px;
  font-family: 600;
  cursor: pointer;
  border: none;
  border-radius: 48px;
  color: #fff;
  background-color: #4B3CFA;
  -webkit-transition: all 140ms ease-in-out;
  transition: all 140ms ease-in-out;
}

.c0:enabled {
  box-shadow: none;
}

.c0:hover:enabled {
  opacity: 0.8;
  box-shadow: none;
}

.c0:active:enabled,
.c0:focus:enabled {
  box-shadow: inset 0 0 0 2px #4B3CFA,inset 0 0 0 4px #fff;
  outline: none;
}

.c0:active:enabled {
  opacity: 0.4;
}

.c0:disabled {
  cursor: not-allowed;
  color: #555B76;
  background-color: #C3C5CF;
}

<button
  class="c0"
>
  <span
    class="c1"
  >
    Large
  </span>
</button>
`;

exports[`Left icon button renders the component with props 1`] = `
.c1 {
  display: block;
  margin-left: 8px;
}

.c0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 12px 32px;
  font-family: "Open Sans",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 16px;
  line-height: 24px;
  font-family: 600;
  cursor: pointer;
  border: none;
  border-radius: 48px;
  color: #fff;
  background-color: #4B3CFA;
  -webkit-transition: all 140ms ease-in-out;
  transition: all 140ms ease-in-out;
}

.c0:enabled {
  box-shadow: none;
}

.c0:hover:enabled {
  opacity: 0.8;
  box-shadow: none;
}

.c0:active:enabled,
.c0:focus:enabled {
  box-shadow: inset 0 0 0 2px #4B3CFA,inset 0 0 0 4px #fff;
  outline: none;
}

.c0:active:enabled {
  opacity: 0.4;
}

.c0:disabled {
  cursor: not-allowed;
  color: #555B76;
  background-color: #C3C5CF;
}

<button
  class="c0"
>
  <div>
    My icon
  </div>
  <span
    class="c1"
  >
    Left icon
  </span>
</button>
`;

exports[`Link button renders the component with props 1`] = `
.c1 {
  display: block;
}

.c0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 12px 32px;
  font-family: "Open Sans",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 16px;
  line-height: 24px;
  font-family: 600;
  cursor: pointer;
  border: none;
  border-radius: 48px;
  color: #4B3CFA;
  background-color: transparent;
  -webkit-transition: all 140ms ease-in-out;
  transition: all 140ms ease-in-out;
}

.c0:enabled {
  box-shadow: none;
}

.c0:hover:enabled {
  opacity: 0.8;
  box-shadow: none;
}

.c0:active:enabled {
  opacity: 0.4;
}

.c0:disabled {
  cursor: not-allowed;
  color: #555B76;
  background-color: #C3C5CF;
}

<button
  class="c0"
>
  <span
    class="c1"
  >
    Link
  </span>
</button>
`;

exports[`Link contrast button renders the component with props 1`] = `
.c1 {
  display: block;
}

.c0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 12px 32px;
  font-family: "Open Sans",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 16px;
  line-height: 24px;
  font-family: 600;
  cursor: pointer;
  border: none;
  border-radius: 48px;
  color: #fff;
  background-color: transparent;
  -webkit-transition: all 140ms ease-in-out;
  transition: all 140ms ease-in-out;
}

.c0:enabled {
  box-shadow: none;
}

.c0:hover:enabled {
  opacity: 0.8;
  box-shadow: none;
}

.c0:active:enabled {
  opacity: 0.4;
}

.c0:disabled {
  cursor: not-allowed;
  color: #555B76;
  background-color: #C3C5CF;
}

<button
  class="c0"
>
  <span
    class="c1"
  >
    Link contrast
  </span>
</button>
`;

exports[`Primary button renders the component with props with no a11y violations 1`] = `
.c1 {
  display: block;
}

.c0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 12px 32px;
  font-family: "Open Sans",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 16px;
  line-height: 24px;
  font-family: 600;
  cursor: pointer;
  border: none;
  border-radius: 48px;
  color: #fff;
  background-color: #4B3CFA;
  -webkit-transition: all 140ms ease-in-out;
  transition: all 140ms ease-in-out;
}

.c0:enabled {
  box-shadow: none;
}

.c0:hover:enabled {
  opacity: 0.8;
  box-shadow: none;
}

.c0:active:enabled,
.c0:focus:enabled {
  box-shadow: inset 0 0 0 2px #4B3CFA,inset 0 0 0 4px #fff;
  outline: none;
}

.c0:active:enabled {
  opacity: 0.4;
}

.c0:disabled {
  cursor: not-allowed;
  color: #555B76;
  background-color: #C3C5CF;
}

<button
  class="c0"
>
  <span
    class="c1"
  >
    Primary
  </span>
</button>
`;

exports[`Primary contrast button renders the component with props 1`] = `
.c1 {
  display: block;
}

.c0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 12px 32px;
  font-family: "Open Sans",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 16px;
  line-height: 24px;
  font-family: 600;
  cursor: pointer;
  border: none;
  border-radius: 48px;
  background-color: #fff;
  -webkit-transition: all 140ms ease-in-out;
  transition: all 140ms ease-in-out;
}

.c0:enabled {
  box-shadow: none;
}

.c0:hover:enabled {
  opacity: 0.8;
  box-shadow: none;
}

.c0:active:enabled,
.c0:focus:enabled {
  box-shadow: inset 0 0 0 2px #fff,inset 0 0 0 4px #293272;
  outline: none;
}

.c0:active:enabled {
  opacity: 0.4;
}

.c0:disabled {
  cursor: not-allowed;
  color: #555B76;
  background-color: #C3C5CF;
}

<button
  class="c0"
>
  <span
    class="c1"
  >
    Primary contrast
  </span>
</button>
`;

exports[`Right icon button renders the component with props 1`] = `
.c1 {
  display: block;
  margin-right: 8px;
}

.c0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 12px 32px;
  font-family: "Open Sans",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 16px;
  line-height: 24px;
  font-family: 600;
  cursor: pointer;
  border: none;
  border-radius: 48px;
  color: #fff;
  background-color: #4B3CFA;
  -webkit-transition: all 140ms ease-in-out;
  transition: all 140ms ease-in-out;
}

.c0:enabled {
  box-shadow: none;
}

.c0:hover:enabled {
  opacity: 0.8;
  box-shadow: none;
}

.c0:active:enabled,
.c0:focus:enabled {
  box-shadow: inset 0 0 0 2px #4B3CFA,inset 0 0 0 4px #fff;
  outline: none;
}

.c0:active:enabled {
  opacity: 0.4;
}

.c0:disabled {
  cursor: not-allowed;
  color: #555B76;
  background-color: #C3C5CF;
}

<button
  class="c0"
>
  <span
    class="c1"
  >
    Right icon
  </span>
  <div>
    My icon
  </div>
</button>
`;

exports[`Secondary button renders the component with props 1`] = `
.c1 {
  display: block;
}

.c0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 12px 32px;
  font-family: "Open Sans",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 16px;
  line-height: 24px;
  font-family: 600;
  cursor: pointer;
  border: none;
  border-radius: 48px;
  color: #4B3CFA;
  background-color: transparent;
  -webkit-transition: all 140ms ease-in-out;
  transition: all 140ms ease-in-out;
}

.c0:enabled {
  box-shadow: inset 0 0 0 2px #B7B1FD;
}

.c0:hover:enabled {
  opacity: 0.8;
  color: #fff;
  background-color: #4B3CFA;
  box-shadow: none;
}

.c0:active:enabled,
.c0:focus:enabled {
  box-shadow: inset 0 0 0 4px #4B3CFA;
  outline: none;
}

.c0:active:enabled {
  opacity: 0.4;
}

.c0:disabled {
  cursor: not-allowed;
  color: #555B76;
  background-color: #C3C5CF;
}

<button
  class="c0"
>
  <span
    class="c1"
  >
    Secondary
  </span>
</button>
`;

exports[`Secondary contrast button renders the component with props 1`] = `
.c1 {
  display: block;
}

.c0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 12px 32px;
  font-family: "Open Sans",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 16px;
  line-height: 24px;
  font-family: 600;
  cursor: pointer;
  border: none;
  border-radius: 48px;
  color: #fff;
  background-color: transparent;
  -webkit-transition: all 140ms ease-in-out;
  transition: all 140ms ease-in-out;
}

.c0:enabled {
  box-shadow: inset 0 0 0 2px #fff;
}

.c0:hover:enabled {
  opacity: 0.8;
  background-color: #fff;
  box-shadow: none;
}

.c0:active:enabled,
.c0:focus:enabled {
  box-shadow: inset 0 0 0 4px #fff;
  outline: none;
}

.c0:active:enabled {
  opacity: 0.4;
}

.c0:disabled {
  cursor: not-allowed;
  color: #555B76;
  background-color: #C3C5CF;
}

<button
  class="c0"
>
  <span
    class="c1"
  >
    Secondary contrast
  </span>
</button>
`;

exports[`Small button renders the component with props 1`] = `
.c1 {
  display: block;
}

.c0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 8px 24px;
  font-family: "Open Sans",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 16px;
  line-height: 24px;
  font-family: 600;
  cursor: pointer;
  border: none;
  border-radius: 48px;
  color: #fff;
  background-color: #4B3CFA;
  -webkit-transition: all 140ms ease-in-out;
  transition: all 140ms ease-in-out;
}

.c0:enabled {
  box-shadow: none;
}

.c0:hover:enabled {
  opacity: 0.8;
  box-shadow: none;
}

.c0:active:enabled,
.c0:focus:enabled {
  box-shadow: inset 0 0 0 2px #4B3CFA,inset 0 0 0 4px #fff;
  outline: none;
}

.c0:active:enabled {
  opacity: 0.4;
}

.c0:disabled {
  cursor: not-allowed;
  color: #555B76;
  background-color: #C3C5CF;
}

<button
  class="c0"
>
  <span
    class="c1"
  >
    Small
  </span>
</button>
`;

exports[`Warning button renders the component with props 1`] = `
.c1 {
  display: block;
}

.c0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 12px 32px;
  font-family: "Open Sans",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 16px;
  line-height: 24px;
  font-family: 600;
  cursor: pointer;
  border: none;
  border-radius: 48px;
  color: #383108;
  background-color: #FFDE25;
  -webkit-transition: all 140ms ease-in-out;
  transition: all 140ms ease-in-out;
}

.c0:enabled {
  box-shadow: none;
}

.c0:hover:enabled {
  opacity: 0.8;
  box-shadow: none;
}

.c0:active:enabled,
.c0:focus:enabled {
  box-shadow: inset 0 0 0 2px #FFDE25,inset 0 0 0 4px #383108;
  outline: none;
}

.c0:active:enabled {
  opacity: 0.4;
}

.c0:disabled {
  cursor: not-allowed;
  color: #555B76;
  background-color: #C3C5CF;
}

<button
  class="c0"
>
  <span
    class="c1"
  >
    Warning
  </span>
</button>
`;
